ci: ignore whitespace differences

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,4 +48,4 @@ jobs:
           yarn gen
 
       - name: Comapre Directories
-        run: diff -r ./src ./src.current
+        run: diff -qrb ./src ./src.current
