--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Install Dependencies and Run Tests
         run: |
-          yarn install --frozen-lockfile
+          yarn set version stable
+          yarn install --immutable
           yarn test
   generate:
     name: Ensure Generated
@@ -43,7 +44,8 @@ jobs:
 
       - name: Install Dependencies and Generate
         run: |
-          yarn install --frozen-lockfile
+          yarn set version stable
+          yarn install --immutable
           cp -r ./src ./src.current
           yarn gen
 
