grammar: allow `#` and `|` characters within block-comments (#9)
Fixes #8

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,14 +21,15 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: yarn
 
       - name: Install Dependencies and Run Tests
         run: |
-          yarn set version stable
+          yarn set version berry
           yarn install --immutable
           yarn test
+
   generate:
     name: Ensure Generated
     runs-on: ubuntu-latest
@@ -39,12 +40,12 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: yarn
 
       - name: Install Dependencies and Generate
         run: |
-          yarn set version stable
+          yarn set version berry
           yarn install --immutable
           cp -r ./src ./src.current
           yarn gen
