--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "bindings/node",
   "scripts": {
     "gen": "yarn tree-sitter generate",
-    "test": "yarn tree-sitter test",
+    "test": "yarn tree-sitter generate && yarn tree-sitter test",
     "parse-sample": "yarn gen && yarn tree-sitter parse test/samples/sample.gc",
     "parse-test": "yarn gen && yarn tree-sitter parse test/samples/test.gc",
     "install": "node-gyp-build",
